# BDEx

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
data/: resource_table.csv
src/BDEx/: ana.py  get_geneset.py  get_geneset_data.py  kg.py  resource_table.csv
src/BDEx.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/tests/: Test_SL.ipynb  Test_mut_dep_expr_batch.ipynb  co_expr_ccle.ipynb  test.ipynb
src/tests/.ipynb_checkpoints/: test-checkpoint.ipynb
