[metadata]
name = BDEx
version = 0.1.6
author = Guangrong Qin
author_email = grqin@systemsbiology.org
description = biomedical data exchange
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gloriachin/BDEx
include_package_data=True
project_urls =
    Bug Tracker = https://github.com/gloriachin/BDEx
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
